<resources>
    <string name="app_name">begIt</string>
    <string name="welcome">Пора делать добрые дела!</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="employee">Работник</string>
    <string name="supervisor">Руководитель</string>
    <string name="email">Почта</string>
    <string name="next">Далее</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="subdivision_code">Код подразделения</string>
    <string name="subdivision_name">Название подразделения</string>
    <string name="profile">Профиль</string>
    <string name="activities">Активности</string>
    <string name="leaderboard">Рейтинг</string>
    <string name="incorrect_password">Неправильный пароль!</string>
    <string name="incorrect_email">Пользователя с такой почтой не существует!</string>
    <string name="incorrect_subdiv_code">Такого подразделения не существует!</string>
    <string name="unknown_error">Неизвестная ошибка!</string>
    <string name="activity_type">Выберите активность</string>
    <string name="start">Начать</string>
    <string name="earned">Заработано</string>
    <string name="search_fund_hint">Давайте найдем фонд!</string>
    <string name="search_fund">Поиск фонда</string>
    <string name="funds">Фонды</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>